# elide

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  deny.toml  rust-toolchain.toml
crates/elide/: Cargo.toml  README.md
crates/elide-codec/: Cargo.toml  README.md
crates/elide-codec/src/: lib.rs
crates/elide-codec/src/codec/: capability.rs  container.rs  document.rs  format.rs  loader.rs  mod.rs  registry.rs
crates/elide-codec/src/content/: content_data.rs  encoding.rs  mod.rs
crates/elide-codec/src/handler/: extract.rs  mod.rs  redact.rs
crates/elide-context/: Cargo.toml  README.md
crates/elide-context/src/: lib.rs  rule.rs
crates/elide-context/src/enhancer/: context.rs  mod.rs  window.rs
crates/elide-context/src/io/: mod.rs  tokens.rs  wrapper.rs
crates/elide-context/src/matching/: lemma.rs  matcher.rs  mod.rs  substring.rs
crates/elide-context/src/recognition/: draft.rs  lift.rs  mod.rs
crates/elide-context/tests/: enhance.rs
crates/elide-core/: Cargo.toml  README.md
crates/elide-core/src/: error.rs  lib.rs
crates/elide-core/src/entity/: builder.rs  mod.rs  reference.rs
crates/elide-core/src/modality/: audio.rs  chunk.rs  data_reader.rs  data_writer.rs  hint.rs  image.rs  mod.rs  tabular.rs  text.rs  text_backed.rs  text_recognizable.rs
crates/elide-core/src/operator/: contract.rs  leak_profile.rs  mod.rs  operator_id.rs  reversible.rs  vault.rs
crates/elide-core/src/primitive/: mod.rs  ocr_text.rs  time.rs  transcription.rs
crates/elide-core/src/provenance/: event.rs
crates/elide-core/src/recognition/: artifacts.rs  context.rs  draft.rs  enricher.rs  hint.rs  input.rs  language.rs  lift.rs  mod.rs  output.rs  scope.rs  stream.rs
crates/elide-core/src/redaction/: attribution.rs  mod.rs  operator.rs  operator_id.rs  redactions.rs  reversible.rs  rule_match.rs  vault.rs
crates/elide-core/tests/: provenance_flow.rs  schema.rs
crates/elide-core/tests/fixtures/: mod.rs
crates/elide-detection/: Cargo.toml  README.md
crates/elide-detection/src/: lib.rs
crates/elide-detection/src/analyzer/: dyn_enricher.rs  mod.rs
crates/elide-detection/src/deduplication/: layer.rs  mod.rs
crates/elide-detection/src/layer/: mod.rs
crates/elide-fake/: Cargo.toml  README.md
crates/elide-fake/src/: lib.rs
crates/elide-fake/src/generator/: case_id.rs  contact.rs  device.rs  dispatch.rs  finance.rs  identity.rs  mod.rs  pattern.rs  temporal.rs
crates/elide-fake/src/locale/: mod.rs
crates/elide-fake/src/operator/: identity.rs  mod.rs
crates/elide-lingua/: Cargo.toml  README.md
crates/elide-lingua/src/: lib.rs  lingua_detector.rs  lingua_enricher.rs
crates/elide-llm/: Cargo.toml  README.md
crates/elide-llm/src/: candidates.rs  error.rs  lib.rs
crates/elide-llm/src/backend/: llm_request.rs  llm_response.rs  mock.rs  mock_backend.rs  mod.rs  request.rs  response.rs
crates/elide-llm/src/modality/: image.rs  localize.rs  mod.rs  text.rs
crates/elide-llm/src/prompt/: default_prompt.rs  image_prompt.rs  jinja2_prompt.rs  mod.rs  text_prompt.rs
crates/elide-llm/src/provider/: authenticated.rs  llm.rs  mod.rs  unauthenticated.rs
crates/elide-llm/src/recognition/: candidates.rs  default_prompt.rs  file_prompt.rs  lift.rs  llm_recognizer.rs  localize.rs  mod.rs  prompt.rs  schemas.rs  text_prompt.rs  vlm_prompt.rs
crates/elide-llm/testdata/: image.j2  text.j2
crates/elide-llm/testdata/prompts/: ner.toml
crates/elide-llm/tests/: file_prompt.rs  jinja2_prompt.rs
crates/elide-ner/: Cargo.toml  README.md
crates/elide-ner/src/: lib.rs
crates/elide-ner/src/backend/: mock_backend.rs  mod.rs  ner_backend.rs  ner_request.rs  ner_response.rs  ner_span.rs
crates/elide-ner/src/decorator/: ignore_labels.rs  mod.rs  score_scale.rs
crates/elide-ner/src/nlp/: lingua_detector.rs  mod.rs  (+1 more)
crates/elide-ocr/: Cargo.toml  README.md
crates/elide-ocr/src/: lib.rs
crates/elide-orchestration/: Cargo.toml  README.md
crates/elide-orchestration/src/: lib.rs  pipeline.rs  report.rs
crates/elide-pattern/: Cargo.toml  README.md
crates/elide-pattern/assets/: PRESIDIO.md  README.md
crates/elide-pattern/tests/: builtin.rs  builtin_au.rs  builtin_ca.rs  builtin_de.rs  builtin_es.rs  builtin_fi.rs  builtin_in.rs  builtin_it.rs  builtin_kr.rs  builtin_ng.rs  builtin_pl.rs  builtin_se.rs  builtin_sg.rs  builtin_th.rs  builtin_tr.rs  builtin_uk.rs  builtin_us.rs  enhancer_roundtrip.rs  user_rules.rs
crates/elide-redaction/: Cargo.toml  README.md
crates/elide-redaction/src/: lib.rs
crates/elide-stt/: Cargo.toml  README.md
crates/elide-stt/src/: lib.rs
crates/elide/src/: codec.rs  detection.rs  enrichment.rs  lib.rs  prelude.rs  recognition.rs  redaction.rs
crates/elide/tests/: analyze.rs  anonymize.rs  context_multimodal.rs  deanonymize.rs  e2e_csv.rs  e2e_docx.rs  e2e_html.rs  e2e_json.rs  e2e_mp3.rs  e2e_png.rs  e2e_txt.rs  e2e_wav.rs
crates/veil-context/: Cargo.toml  README.md
crates/veil-context/src/: lib.rs  rule.rs
crates/veil-context/tests/: enhance.rs
crates/veil-core/: Cargo.toml  README.md
crates/veil-core/src/: error.rs  lib.rs
crates/veil-core/tests/: provenance_flow.rs
crates/veil-llm/: Cargo.toml  README.md
crates/veil-llm/src/: error.rs
crates/veil-llm/tests/: file_prompt.rs
crates/veil-ner/: Cargo.toml  README.md
crates/veil-ner/src/: lib.rs
crates/veil-pattern/: Cargo.toml  README.md
crates/veil-pattern/assets/: PRESIDIO.md  README.md
crates/veil-pattern/src/: lib.rs
crates/veil-pattern/tests/: builtin.rs  builtin_au.rs  builtin_ca.rs  builtin_de.rs  builtin_es.rs  builtin_fi.rs  builtin_in.rs  builtin_it.rs  builtin_kr.rs  builtin_ng.rs  builtin_pl.rs  builtin_se.rs  builtin_sg.rs  builtin_th.rs  builtin_tr.rs  builtin_uk.rs  builtin_us.rs  enhancer_roundtrip.rs  user_rules.rs
crates/veil-toolkit/: Cargo.toml  README.md
crates/veil-toolkit/src/: lib.rs
crates/veil-toolkit/tests/: analyze.rs  anonymize.rs
examples/: Cargo.toml  redact_docx.rs  redact_txt.rs
examples/data/: contact.docx  sample.txt
examples/src/: analyzer.rs  anonymizer.rs  main.rs
(+630 files in other folders)
