# https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "3"
members = [
    "./crates/veil-core",
    "./crates/veil-toolkit",
]

[workspace.package]
version = "0.1.0"
rust-version = "1.95"
edition = "2024"
license = "Apache-2.0"
publish = false

authors = ["nvisy <contact@nvisy.com>"]
repository = "https://github.com/nvisycom/veil"
homepage = "https://github.com/nvisycom/veil"
documentation = "https://docs.rs/veil-toolkit"

[workspace.dependencies]
# Default features are disabled for certain dependencies to allow
# downstream workspaces/crates to selectively enable them as needed.
#
# See for more details: https://github.com/rust-lang/cargo/issues/11329

# Internal crates
veil-core = { path = "./crates/veil-core", version = "0.1.0" }
veil-toolkit = { path = "./crates/veil-toolkit", version = "0.1.0" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [] }
schemars = { version = "1.0", features = ["uuid1", "bytes1"] }

# Derive macros and error handling
thiserror = { version = "2.0", features = [] }
derive_more = { version = "2.0", features = ["as_ref", "deref", "deref_mut", "display", "from", "from_str", "into", "into_iterator", "is_variant"] }
derive_builder = { version = "0.20", features = [] }
strum = { version = "0.28", features = ["derive"] }

# Primitive datatypes
uuid = { version = "1.23", features = ["serde", "v4", "v7"] }
bytes = { version = "1.0", features = ["serde"] }
hipstr = { version = "0.8", features = ["serde"] }
type-map = { version = "0.5", features = [] }

# Encoding and hashing
base64 = { version = "0.22", features = [] }
sha2 = { version = "0.11", features = [] }

# Async runtime and parallelism
tokio = { version = "1.50", features = [] }
async-trait = { version = "0.1", features = [] }

# Observability
tracing = { version = "0.1", features = ["attributes"] }

# Text processing (pattern matching, unicode)
regex = { version = "1.0", features = [] }
unicode-normalization = { version = "0.1", features = [] }
