# https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "3"
members = [
    "./crates/elide-core",
    "./crates/elide-context",
    "./crates/elide-pattern",
    "./crates/elide-ner",
    "./crates/elide-lingua",
    "./crates/elide-llm",
    "./crates/elide-stt",
    "./crates/elide-ocr",
    "./crates/elide-codec",
    "./crates/elide-fake",
    "./crates/elide",
    "./examples",
]

[workspace.package]
version = "0.1.0"
rust-version = "1.95"
edition = "2024"
license = "Apache-2.0"
publish = false

authors = ["nvisy <contact@nvisy.com>"]
repository = "https://github.com/nvisycom/elide"
homepage = "https://github.com/nvisycom/elide"
documentation = "https://docs.rs/elide"

[workspace.dependencies]
# Default features are disabled for certain dependencies to allow
# downstream workspaces/crates to selectively enable them as needed.
#
# See for more details: https://github.com/rust-lang/cargo/issues/11329

# Internal crates
elide-core = { path = "./crates/elide-core", version = "0.1.0" }
elide-context = { path = "./crates/elide-context", version = "0.1.0" }
elide-pattern = { path = "./crates/elide-pattern", version = "0.1.0" }
elide-ner = { path = "./crates/elide-ner", version = "0.1.0" }
elide-lingua = { path = "./crates/elide-lingua", version = "0.1.0" }
elide-llm = { path = "./crates/elide-llm", version = "0.1.0" }
elide-stt = { path = "./crates/elide-stt", version = "0.1.0" }
elide-ocr = { path = "./crates/elide-ocr", version = "0.1.0" }
elide-codec = { path = "./crates/elide-codec", version = "0.1.0" }
elide-fake = { path = "./crates/elide-fake", version = "0.1.0" }
elide = { path = "./crates/elide", version = "0.1.0" }

# (De)serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [] }
erased-serde = { version = "0.4", features = [] }
toml = { version = "1.1", features = [] }
csv = { version = "1.0", features = [] }
humantime-serde = { version = "1.1", features = [] }

# Derive macros & error handling
thiserror = { version = "2.0", features = [] }
derive_more = { version = "2.0", features = ["as_ref", "deref", "deref_mut", "display", "from", "from_str", "into", "into_iterator", "is_variant"] }
derive_builder = { version = "0.20", features = [] }
strum = { version = "0.28", features = ["derive"] }

# Primitive datatypes
uuid = { version = "1.23", features = ["serde", "v4", "v7"] }
bytes = { version = "1.0", features = ["serde"] }
fake = { version = "5.1", features = [] }
hipstr = { version = "0.8", features = ["serde"] }
jiff = { version = "0.2", features = ["serde"] }
oxilangtag = { version = "0.1", features = ["serialize"] }
celes = { version = "2.8", features = [] }
type-map = { version = "0.5", features = [] }

# Encoding & hashing
base64 = { version = "0.22", features = [] }
sha2 = { version = "0.11", features = [] }
hex = { version = "0.4", features = [] }

# Cryptography
aes-gcm = { version = "0.10", features = [] }

# Async runtime & parallelism
tokio = { version = "1.50", features = [] }
async-trait = { version = "0.1", features = [] }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
rayon = { version = "1.10", features = [] }

# Observability
tracing = { version = "0.1", features = ["attributes"] }

# Text processing
regex = { version = "1.0", features = [] }
aho-corasick = { version = "1.0", features = [] }
unicode-normalization = { version = "0.1", features = [] }
unicode-segmentation = { version = "1.13", features = [] }

# Natural language processing
lingua = { version = "1.8", default-features = false, features = ["english"] }

# Checksums & validators
bs58 = { version = "0.5", features = ["check"] }
iban_validate = { version = "5.0" }
phonenumber = { version = "0.3", default-features = false }

# Markup parsing
scraper = { version = "0.27", features = [] }
ego-tree = { version = "0.11", features = [] }
quick-xml = { version = "0.40", features = [] }

# Compression
zip = { version = "8.6", default-features = false, features = ["deflate"] }

# Image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tiff"] }
imageproc = { version = "0.27", features = [] }

# Rendering
pdfium-render = { version = "0.9", features = [] }

# Audio processing
hound = { version = "3.5", features = [] }
symphonia = { version = "0.6", default-features = false, features = ["wav", "pcm", "mp3"] }
mp3lame-encoder = { version = "0.2", features = [] }

# AI & LLM frameworks
rig = { version = "0.39", default-features = false, features = [] }

# Templating & schema
minijinja = { version = "2.5", features = [] }
schemars = { version = "1.0", features = ["uuid1", "bytes1"] }

# HTTP client & middlewares
reqwest-middleware = { version = "0.5", features = ["json", "multipart"] }
reqwest-retry = { version = "0.9", features = [] }
reqwest-tracing = { version = "0.7", features = [] }
