# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "elide-examples"
description = "End-to-end usage examples for the Elide toolkit"
publish = false
# Each example is a self-contained file at the crate root, declared as its
# own binary below; nothing is auto-discovered.
autobins = false

version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

## Each example is a self-contained binary, run with
## `cargo run -p elide-examples --bin <name>`.
[[bin]]
name = "redact_txt"
path = "redact_txt.rs"

[[bin]]
name = "redact_docx"
path = "redact_docx.rs"

[dependencies]
# Internal crates
elide = { workspace = true, features = [
    "codec",
    "codec-docx",
    "codec-png",
    "mock",
] }

# Async runtime & parallelism
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
