# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "elide-codec"
description = "Codec traits and format handlers for reading and redacting documents"
keywords = ["elide", "codec", "document", "redaction"]
categories = ["encoding", "text-processing"]
readme = "README.md"

version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
## Only the plain-text format. Opt into more individually (`json`,
## `html`, `xml`) or take the `text` umbrella for all of them. The
## registry's `with_builtin` wires up only enabled formats.
default = ["txt"]

## Derive `serde::{Serialize, Deserialize}` on the re-exported core
## domain types. The codec itself does not use serde; this only forwards
## to `elide-core` for consumers who serialize the entities a codec reads.
serde = ["elide-core/serde"]

## Every text-shaped format currently shipped.
text = ["txt", "json", "html", "xml"]

## Individual text formats.
txt = []
json = ["dep:serde_json"]
## HTML: DOM-aware handler via `scraper`.
html = ["dep:scraper", "dep:ego-tree"]
## XML: verbatim span-splicing handler via `quick-xml`.
xml = ["dep:quick-xml"]

[dependencies]
# Internal crates
elide-core = { workspace = true, features = [] }

# (De)serialization (JSON handler, gated behind `json`)
serde_json = { workspace = true, features = [], optional = true }

# Primitive datatypes
bytes = { workspace = true, features = [] }

# Encoding & hashing
sha2 = { workspace = true, features = [] }
hex = { workspace = true, features = [] }

# Observability
tracing = { workspace = true, features = [] }

# Markup parsing (HTML gated behind `html`, XML behind `xml`)
scraper = { workspace = true, features = [], optional = true }
ego-tree = { workspace = true, features = [], optional = true }
quick-xml = { workspace = true, features = [], optional = true }

[dev-dependencies]
# Async runtime & parallelism
tokio = { workspace = true, features = ["macros", "rt"] }
