# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "elide-codec"
description = "Codec traits and format handlers for reading and redacting documents"
keywords = ["elide", "codec", "document", "redaction"]
categories = ["encoding", "text-processing"]
readme = "README.md"

version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
## Only the plain-text format. Opt into more individually (`json`,
## `html`, `xml`) or take the `text` umbrella for all of them. The
## registry's `with_builtin` wires up only enabled formats.
default = ["txt"]

## Derive `serde::{Serialize, Deserialize}` on the re-exported core
## domain types. The codec itself does not use serde; this only forwards
## to `elide-core` for consumers who serialize the entities a codec reads.
serde = ["elide-core/serde"]

## Derive `schemars::JsonSchema` on the re-exported core domain types.
## Forwards to `elide-core`; the codec has no schema types of its own.
schema = ["elide-core/schema"]

## The text-shaped formats.
text = ["txt", "json", "html", "xml"]

## Individual text formats.
txt = ["internal_text"]
json = ["internal_text", "dep:serde_json"]
html = ["internal_extract", "dep:scraper", "dep:ego-tree"]
xml = ["internal_extract", "dep:quick-xml"]

## The rich-document formats.
document = ["docx", "pdf", "rtf"]

## DOCX: a zip of OOXML. Body text in `word/document.xml` is extracted and
## spliced through the shared XML engine; `zip` opens and rebuilds the
## package. Pulls `xml` for extraction, `internal_document` for the
## container surface, and `zip` for the package.
docx = ["xml", "internal_document", "dep:zip"]

## PDF: a container of page text and image XObjects in its own indirect-
## object format (not a zip). Pulls `internal_document` for the container
## surface; the object parser is its own dep.
pdf = ["internal_document"]

## PDF page rendering to images (for OCR), via the native PDFium shared
## library. Off by default and separate from `pdf` because it needs the
## PDFium `.so`/`.dylib` present at runtime (see `scripts/install-pdfium.sh`).
## Pulls `pdf` (the loader/handler it extends) and `internal_image` (to
## re-encode rendered pages as `ImageData`), plus `pdfium-render` and
## `rayon` (the dedicated single-thread render pool).
pdf-render = ["pdf", "internal_image", "dep:pdfium-render", "dep:rayon"]

## RTF: flat rich text (control words and groups), a leaf text handler
## alongside the other document formats.
rtf = ["internal_document"]

## The image formats.
image = ["png", "jpeg", "tiff"]

## Individual image formats (all share the `image` + `imageproc` stack
## pulled in by `internal_image`).
png = ["internal_image"]
jpeg = ["internal_image"]
tiff = ["internal_image"]

## The audio formats.
audio = ["wav", "mp3"]

## WAV: `hound` reads and re-writes samples; `symphonia` probes the
## clip duration.
wav = ["internal_audio", "dep:hound", "dep:symphonia"]
## MP3: `symphonia` probes duration and decodes to PCM; `mp3lame-encoder`
## (LGPL-3.0 via libmp3lame, needs a C toolchain at build) re-encodes for
## the redaction round-trip.
mp3 = ["internal_audio", "dep:symphonia", "dep:mp3lame-encoder"]

## The tabular formats.
tabular = ["csv", "xlsx"]

## CSV: `csv` parses and re-writes rows. Cells hold text and redact like
## text, so this pulls the shared text-redaction helper.
csv = ["internal_tabular", "dep:csv"]
## XLSX: an OOXML spreadsheet; cells redact like text via the shared
## tabular surface.
xlsx = ["internal_tabular"]

# Internal markers: set automatically by any format feature above. Code
# uses `#[cfg(feature = "internal_image")]` to mean "any image format is
# enabled", the gate for the shared per-modality infrastructure. Not meant
# to be enabled directly. `internal_tabular` also pulls `internal_text`
# because tabular cells reuse the text-redaction helper.
internal_image = ["elide-core/image", "dep:image", "dep:imageproc"]
internal_audio = ["elide-core/audio"]
internal_tabular = ["elide-core/tabular", "internal_text"]
internal_text = []
# The shared text-extract-and-splice engine, used by the markup formats
# and rich documents. Pulls `internal_text` because items are text and
# reuse the text-redaction helper.
internal_extract = ["internal_text"]
# The rich-document container machinery (`handler::document`): the
# modality-neutral part surface shared by the document formats. No dep of
# its own; each format pulls its own parser.
internal_document = []

[dependencies]
# Internal crates
elide-core = { workspace = true, features = [] }

# (De)serialization
serde_json = { workspace = true, features = [], optional = true }
csv = { workspace = true, features = [], optional = true }

# Primitive datatypes
bytes = { workspace = true, features = [] }

# Encoding & hashing
sha2 = { workspace = true, features = [] }
hex = { workspace = true, features = [] }

# Observability
tracing = { workspace = true, features = [] }

# Markup parsing
scraper = { workspace = true, features = [], optional = true }
ego-tree = { workspace = true, features = [], optional = true }
quick-xml = { workspace = true, features = [], optional = true }

# Container formats
zip = { workspace = true, optional = true }

# Image processing
image = { workspace = true, features = [], optional = true }
imageproc = { workspace = true, features = [], optional = true }

# PDF rendering (native PDFium; behind `pdf-render`)
pdfium-render = { workspace = true, features = [], optional = true }
rayon = { workspace = true, features = [], optional = true }

# Audio processing
hound = { workspace = true, features = [], optional = true }
symphonia = { workspace = true, features = [], optional = true }
mp3lame-encoder = { workspace = true, features = [], optional = true }

[dev-dependencies]
# Async runtime & parallelism
tokio = { workspace = true, features = ["macros", "rt"] }
