# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "elide-context"
description = "Post-recognition keyword-boost enhancer for Elide entities"
keywords = ["elide", "context", "enhancer", "pii"]
categories = ["text-processing"]
readme = "README.md"

version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Internal crates
elide-core = { workspace = true, features = [] }

# Primitive datatypes
hipstr = { workspace = true, features = [] }

# Text processing
unicode-segmentation = { workspace = true, features = [] }

# Observability
tracing = { workspace = true, features = [] }

[dev-dependencies]
# Async runtime & parallelism
tokio = { workspace = true, features = ["macros", "rt"] }
