# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "elide-core"
description = "Domain types, traits, and errors for the elide toolkit"
keywords = ["elide", "core", "domain", "types"]
categories = ["data-structures"]
readme = "README.md"

version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
## No features on by default: the core domain model is serde-free and
## ships only the `text` modality unless a feature opts in more.
default = []

## The `image` modality (`Image`, `ImageData`, `ImageLocation`,
## `ImageReplacement`). Off by default; text-only consumers don't pay for
## it.
image = ["dep:bytes"]

## The `audio` modality (`Audio`, `AudioData`, `AudioLocation`,
## `AudioReplacement`). Off by default; text-only consumers don't pay for
## it.
audio = ["dep:bytes"]

## The `tabular` modality (`Tabular`, `TabularLocation`). Cells reuse the
## text payload and replacement, so this adds no dependency. Off by
## default; text-only consumers don't pay for it.
tabular = []

## Derive `serde::{Serialize, Deserialize}` on the domain types, and
## enable serde support in the underlying primitive crates. (`celes`
## and `oxilangtag` carry their serde impls unconditionally.)
serde = ["dep:serde", "hipstr/serde", "jiff/serde", "uuid/serde", "bytes?/serde"]

## Test utilities (fixture helpers, builders, …).
test-utils = []

[dependencies]
# (De)serialization (optional — gated behind the `serde` feature)
serde = { workspace = true, features = ["derive"], optional = true }

# Derive macros & error handling
derive_builder = { workspace = true, features = [] }

# Primitive datatypes (`bytes` optional — gated behind `image`/`audio`)
uuid = { workspace = true, features = ["v7"] }
hipstr = { workspace = true, features = [] }
jiff = { workspace = true, features = [] }
oxilangtag = { workspace = true, features = [] }
celes = { workspace = true, features = [] }
type-map = { workspace = true, features = [] }
bytes = { workspace = true, features = [], optional = true }

[dev-dependencies]
# Async runtime for the vault's async trait tests
tokio = { workspace = true, features = ["rt", "macros"] }
