# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "elide-detection"
description = "Detection engine for the Elide toolkit: the Analyzer and its deduplication layers"
keywords = ["pii", "detection", "deduplication", "ner"]
categories = ["text-processing"]
readme = "README.md"

version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

## Derive `serde::{Serialize, Deserialize}` on the re-exported core types.
serde = ["elide-core/serde"]

## Derive `schemars::JsonSchema` on the re-exported core types.
schema = ["elide-core/schema"]

[dependencies]
# Internal crates
elide-core = { workspace = true, features = [] }

# Async runtime & parallelism
futures = { workspace = true, features = [] }

# Observability
tracing = { workspace = true, features = [] }
