# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "elide-detection"
description = "Detection engine for the Elide toolkit: the Analyzer and its deduplication layers"
keywords = ["pii", "detection", "deduplication", "ner"]
categories = ["text-processing"]
readme = "README.md"

version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

## Derive `serde::{Serialize, Deserialize}` on the re-exported core types and
## on this crate's serializable config (the [`CalibrationMap`]).
serde = ["dep:serde", "elide-core/serde"]

## Derive `schemars::JsonSchema` on the re-exported core types and on this
## crate's serializable config.
schema = ["serde", "dep:schemars", "elide-core/schema"]

[dependencies]
# Internal crates
elide-core = { workspace = true, features = [] }

# (De)serialization
serde = { workspace = true, features = ["derive"], optional = true }
schemars = { workspace = true, features = [], optional = true }

# Async runtime & parallelism
futures = { workspace = true, features = [] }
async-trait = { workspace = true, features = [] }

# Observability
tracing = { workspace = true, features = [] }
