# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "elide-llm"
description = "LLM-mediated entity recognizer (text NER + image VLM) for the elide toolkit"
keywords = ["rig", "llm", "ner", "pii"]
categories = ["text-processing", "api-bindings"]
readme = "README.md"

version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[features]
## No provider on by default: enable one of the provider features (or
## `mock`) to obtain a usable backend.
default = []

## Enable OpenAI GPT completion provider.
openai-gpt = []
## Enable Anthropic Claude completion provider.
anthropic-claude = []
## Enable Google Gemini completion provider.
google-gemini = []
## Ship the no-op `MockBackend` for tests, examples, and offline wiring.
mock = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Internal crates
elide-core = { workspace = true, features = ["image", "serde"] }

# (De)serialization
serde = { workspace = true, features = [] }
serde_json = { workspace = true, features = [] }
toml = { workspace = true, features = ["parse"] }
humantime-serde = { workspace = true, features = [] }

# Derive macros & error handling
derive_builder = { workspace = true, features = [] }
derive_more = { workspace = true, features = ["add_assign"] }
thiserror = { workspace = true, features = [] }

# Encoding & hashing
base64 = { workspace = true, features = [] }

# Async runtime & parallelism
async-trait = { workspace = true, features = [] }

# Observability
tracing = { workspace = true, features = [] }

# Text processing
unicode-normalization = { workspace = true, features = [] }

# AI & LLM frameworks
rig = { workspace = true, features = ["derive", "reqwest-middleware"] }

# Templating & schema
minijinja = { workspace = true, features = [] }
schemars = { workspace = true, features = [] }

# HTTP client & middlewares
reqwest-middleware = { workspace = true, features = [] }
reqwest-retry = { workspace = true, features = [] }
reqwest-tracing = { workspace = true, features = [] }

[dev-dependencies]
# Async runtime & parallelism
tokio = { workspace = true, features = ["macros", "rt"] }

[package.metadata.cargo-machete]
ignored = ["humantime-serde"]
